# AdventOfCode

./: .gitignore  .gitmodules  AdventOfCode.sln  Archive.sln  Cargo.toml  rustc-ice-2023-12-15T01_11_00-66548.txt  rustc-ice-2023-12-15T01_11_12-59284.txt
.cargo/: config.toml
2015/: Cargo.toml  build.rs
2015/src/: lib.rs  main.rs
2016/AdventOfCode2016/: AdventOfCode2016.csproj  Direction.cs  ElevatorState.cs  Point.cs  Program.cs  Robot.cs  packages.config
2017/AdventOfCode2017/: AdventDay.cs  AdventOfCode2017.csproj  Day1.cs  Day10.cs  Day11.cs  Day12.cs  Day13.cs  Day14.cs  Day15.cs  Day16.cs  Day17.cs  Day18.cs  Day19.cs  Day2.cs  Day20.cs  Day21.cs  Day22.cs  Day23.cs  Day24.cs  Day25.cs  Day3.cs  Day4.cs  Day5.cs  Day6.cs  Day7.cs  Day8.cs  Day9.cs  IAdventDay.cs  Program.cs  Toolbox.cs
2017/AdventOfCode2017.Test/: AdventOfCode2017.Test.csproj  Day10Test.cs  Day11Test.cs  Day12Test.cs  Day13Test.cs  Day14Test.cs  Day15Test.cs  Day16Test.cs  Day17Test.cs  Day18Test.cs  Day19Test.cs  Day1Test.cs  Day20Test.cs  Day21Test.cs  Day22Test.cs  Day23Test.cs  Day24Test.cs  Day25Test.cs  Day2Test.cs  Day3Test.cs  Day4Test.cs  Day5Test.cs  Day6Test.cs  Day7Test.cs  Day8Test.cs  Day9Test.cs  DayTest.cs
2018/AdventOfCode.CSharp/: AdventOfCode.CSharp.csproj  AdventOfCode2018.CSharp.csproj  CSharpDayFactory.cs  Day1.cs  Day2.cs
2018/AdventOfCode.FSharp/: AdventOfCode.FSharp.fsproj  AdventOfCode2018.FSharp.fsproj  Day1.fs  (+1 more)
2023/: Cargo.toml  README.MD  build.rs
2023/.cargo/: config.toml
2023/src/: day1.rs  lib.rs  main.rs
2023/src/day01/: mod.rs
2023/src/day02/: mod.rs
2023/src/day03/: mod.rs
2023/src/day04/: mod.rs
2023/src/day05/: mod.rs
2023/src/day06/: mod.rs
2023/src/day07/: mod.rs
2023/src/day08/: mod.rs
2023/src/day09/: mod.rs
2023/src/day1/: mod.rs
2023/src/day10/: mod.rs
2023/src/day11/: mod.rs
2023/src/day12/: mod.rs
2023/src/day13/: mod.rs
2023/src/day14/: mod.rs
2023/src/day15/: mod.rs
2023/src/day16/: mod.rs
2023/src/day17/: mod.rs
2023/src/day18/: mod.rs
2023/src/day19/: mod.rs
2023/src/day2/: mod.rs
2023/src/day20/: mod.rs
2023/src/day21/: mod.rs
2023/src/day22/: mod.rs
2023/src/day23/: mod.rs
2023/src/day24/: mod.rs
2023/src/day3/: mod.rs
2023/src/day4/: mod.rs
2023/src/day5/: mod.rs
2023/src/day6/: mod.rs
2023/src/day7/: mod.rs
2023/src/day8/: mod.rs
2023/src/day9/: mod.rs
2024/: Cargo.toml  build.rs
2024/src/: lib.rs  main.rs
2024/src/day01/: input.txt  mod.rs
2024/src/day02/: input.txt  mod.rs
2024/src/day03/: input.txt  mod.rs
2024/src/day04/: input.txt  mod.rs
2024/src/day05/: input.txt  mod.rs
2024/src/day06/: input.txt  mod.rs
2024/src/day07/: input.txt  mod.rs
2024/src/day08/: input.txt  mod.rs
2024/src/day09/: mod.rs
2024/src/day10/: mod.rs
2024/src/day11/: mod.rs
2024/src/day12/: mod.rs
2024/src/day13/: mod.rs
2024/src/day14/: mod.rs
2024/src/day15/: mod.rs
2024/src/day16/: mod.rs
2024/src/day17/: mod.rs
2024/src/day18/: input.txt  mod.rs
2024/src/day19/: mod.rs
2024/src/day20/: mod.rs
2024/src/day21/: mod.rs
2024/src/day22/: mod.rs
2024/src/day23/: mod.rs
2024/src/day24/: mod.rs
2024/src/day25/: mod.rs
2025/: Cargo.toml  build.rs
2025/src/: lib.rs  main.rs
2025/src/day01/: mod.rs
2025/src/day02/: mod.rs
2025/src/day03/: mod.rs
2025/src/day04/: mod.rs
2025/src/day05/: mod.rs
2025/src/day06/: mod.rs
2025/src/day07/: mod.rs
2025/src/day08/: mod.rs
2025/src/day09/: mod.rs
AdventOfCode.Core/: AdventOfCode.Core.csproj  DayTest.cs  FuncEx.cs  IDay.cs  OrthoLine.cs  Parsers.cs  Point.cs  Runner.cs  SolutionBase.cs
advent/: Cargo.toml
advent/src/: lib.rs
everything/: Cargo.toml
everything/src/: main.rs
(+79 files in other folders)
