[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
default-run = "advent_of_code"

[[bin]]
name = "day1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.2"
env_logger = "0.10"
log = "0.4"
onig = { version = "6.4.0", default-features = false }