[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2021"
default-run = "advent_of_code_2024"

[[bin]]
name = "day"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent = { path = "../advent" }
bitflags = "2.4"
crossterm = "0.27"
ctor = "0.2"
env_logger = "0.10"
log = "0.4"
nalgebra = "0.32"
# ndarray = "0.15"
# ndarray-linalg = "0.16"
num = "0.4"
onig = { version = "6.4.0", default-features = false }
rayon = "1.8"
regex = "1.10"

[features]
cursed = []
