[package]
name = "advent_of_code_2025"
version = "0.1.0"
edition = "2021"
default-run = "advent_of_code_2025"

[[bin]]
name = "day"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent = { path = "../advent" }
array2d = "0.3"
bitflags = "2.4"
crossterm = "0.28"
ctor = "0.2"
dashmap = "6.1"
env_logger = "0.11"
itertools = "0.14"
log = "0.4"
nalgebra = "0.33"
# ndarray = "0.15"
# ndarray-linalg = "0.16"
tokio = { version = "1.48", features = ["full"] }
num = "0.4"
onig = { version = "6.5", default-features = false }
rayon = "1.8"
regex = "1.10"

[features]
default = ["day01", "day02", "day03", "day04"]
cursed = []
day01 = []
day02 = []
day03 = []
day04 = []
day05 = []
day06 = []
day07 = []
day08 = []
day09 = []
day10 = []
day11 = []
day12 = []
