[package]
name = "advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.2"
env_logger = "0.10"
log = "0.4"
num-traits = "0.2"
onig = { version = "6.4.0", default-features = false }
regex = "1.10"
