[package]
name = "everything"
version = "0.1.0"
edition = "2021"

[dependencies]
advent = { path = "../advent" }
advent_of_code_2015 = { path = "../2015" }
advent_of_code_2023 = { path = "../2023" }
advent_of_code_2024 = { path = "../2024" }
advent_of_code_2025 = { path = "../2025" }

tokio = "1.48"
rayon = "1.11"
